Finished a rough Java 20 migration
* Polishing and fine tuning still missing though.