@@ -1,37 +1,38 @@
 package com.itemis.fluffyj.memory.internal;
 
-import static java.lang.foreign.SegmentAllocator.newNativeArena;
 import static java.util.Objects.requireNonNull;
 
 import com.itemis.fluffyj.memory.api.FluffyScalarSegment;
 
-import java.lang.foreign.MemoryAddress;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.SegmentAllocator;
+import java.lang.foreign.SegmentScope;
 
 public class StringSegment implements FluffyScalarSegment<String> {
 
+    private final SegmentScope scope;
     private final MemorySegment backingSeg;
 
     /**
      * Allocate a new segment.
      *
      * @param initialValue - The new segment will hold this value.
-     * @param session - The new segment will be attached to this session, i. e. if the session is
-     *        closed, the new segment will not be alive anymore.
+     * @param scope - The new segment will be attached to this scope.
      */
-    public StringSegment(String initialValue, MemorySession session) {
-        this.backingSeg = newNativeArena(requireNonNull(session, "session"))
+    public StringSegment(String initialValue, SegmentScope scope) {
+        this.scope = requireNonNull(scope, "scope");
+        this.backingSeg = SegmentAllocator.nativeAllocator(scope)
             .allocateUtf8String(requireNonNull(initialValue, "initialValue"));
     }
 
     /**
      * Wrap the provided {@code backingSeg}. The constructed segment will be attached to the same
-     * session as the {@code backingSeg}.
+     * scope as the {@code backingSeg}.
      *
      * @param backingSeg - The raw segment to wrap.
      */
     public StringSegment(MemorySegment backingSeg) {
+        this.scope = backingSeg.scope();
         this.backingSeg = requireNonNull(backingSeg, "backingSeg");
     }
 
@@ -41,17 +42,22 @@ public class StringSegment implements FluffyScalarSegment<String> {
     }
 
     @Override
-    public MemoryAddress address() {
+    public long address() {
         return backingSeg.address();
     }
 
     @Override
+    public MemorySegment addressAsSeg() {
+        return MemorySegment.ofAddress(address(), 0, scope);
+    }
+
+    @Override
     public boolean isAlive() {
-        return backingSeg.session().isAlive();
+        return backingSeg.scope().isAlive();
     }
 
     @Override
     public String getValue() {
-        return address().getUtf8String(0);
+        return backingSeg.getUtf8String(0);
     }
 }
